Some improvements was added